<resources>
    <string name="app_name">Personal Information System</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="log_in">LOG IN</string>
    <string name="design_by_rahul_joshi">Design by Rahul Joshi</string>
    <string name="forget_password">Forget password?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_phone_no">Enter Phone No.</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="already_have_an_account">Already have an account...</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_password">Enter Password</string>
    <string name="password_information">Password Information</string>
    <string name="document_information">Document Information</string>
    <string name="bank_information">Bank Information</string>
    <string name="personal_information">Personal Information</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_more_information">Add More Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="add_information">Add Information</string>
    <string name="close_the_dialog_box">Close the dialog box</string>
    <string name="personal">Personal</string>
    <string name="customer_id_password">Customer ID Password</string>
    <string name="customer_id">Customer ID</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="account_number">Account Number</string>
    <string name="account_type">Account Type</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_details">Bank Details</string>
    <string name="document_details">document details</string>
    <string name="password_details">password details</string>
    <string name="document_name">Document Name</string>
    <string name="document_number">Document Number</string>
    <string name="password">Password</string>
    <string name="password_name">Password Name</string>
    <string name="logo_for_app">Logo for app</string>
</resources>