<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="11dp"
    android:background="#5DAE81">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank_information"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:layout_gravity="center"
                tools:ignore="RelativeOverlap" />

            <ImageButton
                android:id="@+id/closeDialog"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:background="#FFFFFF"
                android:contentDescription="@string/close_the_dialog_box"
                android:src="@android:drawable/ic_delete"
                tools:ignore="TouchTargetSizeCheck" />
        </RelativeLayout>

        <EditText
            android:id="@+id/bankName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/bank_name"
            android:importantForAutofill="yes"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/accountType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/account_type"
            android:importantForAutofill="yes"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/accountNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/account_number"
            android:importantForAutofill="yes"
            android:inputType="number"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/ifscCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/ifsc_code"
            android:importantForAutofill="yes"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/customerId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/customer_id"
            android:importantForAutofill="yes"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/customerIdPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/customer_id_password"
            android:importantForAutofill="yes"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnAddBankInfo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</ScrollView>