<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="11dp"
    android:background="#5DAE81">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_information"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                tools:ignore="RelativeOverlap" />

            <ImageButton
                android:id="@+id/closeDialog"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:background="#FFFFFF"
                android:contentDescription="@string/close_the_dialog_box"
                android:src="@android:drawable/ic_delete"
                tools:ignore="TouchTargetSizeCheck" />
        </RelativeLayout>

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/first_name"
            android:importantForAutofill="yes"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="#263238"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/last_name"
            android:importantForAutofill="yes"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/date_of_birth"
            android:importantForAutofill="yes"
            android:inputType="date"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/phone_number"
            android:importantForAutofill="yes"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="#263238"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnAddPersonalInfo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</ScrollView>